frontend/tests/cases/positive/polymorphism/polySimple.gr
id : forall {a : Type} . a -> a
id x = x

usethis : Int
<<<<<<< HEAD
usethis = id 42
=======
usethis = id 42
>>>>>>> graded-base
