frontend/tests/cases/negative/splitting/int.gr
next : Int -> Int
next x = {! x !}